# code2025

./: .gitmodules  README.md
CabExample/: pyproject.toml
topic-04/classguide/: 1_data_behavior.py  5_encapsulation.py
topic-05/img_to_csv/: convert.py
topic-05/plot_iris/: plot_iris_dataset.py  requirements.txt
topic-05/sqlalchemy-tutorial/: 01_engine_usage.py  README.md  (+2 more)
topic-06/: README.md  app.py  database.db
topic-09/CabExample/: README.md  dbConnect.py  distance.py  findmeataxiifproblem.py  main.py  pyproject.toml
topic-09/CabExample/models/: drivers.py  onlinedriver.py
topic-09/CabExample/templates/: layout.html  listofcustomers.html  listofonlinedrivers.html  listofrequestedblock.html  login.html  onlinedriversmap.html  register.html  update.html
topic-09/CabExampleTwo/: alertcustomer.py  blockcustomer.py  call.py  completedaride.py  customerlogin.py  customerlogout.py  dashboard.py  db.py  delete.py  details.py  distance.py  driverforgotpassword.py  driverlogin.py  findmeataxi.py  forgotpassword.py  getmeacode.py  goonline.py  gotapassenger.py  listofcustomers.py  listofdrivers.py  listofonlinedrivers.py  login.py  logout.py  main.py  mycustomers.py  mydrivers.py  pyproject.toml  register.py  registeracustomer.py  selectataxi.py  showinformationofride.py  showprofile.py  update.py  updateme.py
topic-09/CabExampleTwo/models/: customers.py  drivers.py  onlinedriver.py
topic-09/CabExampleTwo/templates/: dashboard.html  delete.html  details.html  layout2.html  layout3.html  listofblockedcustomer.html  listofdrivers.html  login.html  update.html
(+16 files in other folders)
