[tool.poetry]
name = "cabexample"
version = "0.1.0"
description = ""
authors = ["Keith Mannock <k.mannock@bbk.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
sqlmodel = "^0.0.8"
geopy = "^2.3.0"
flask-googlemaps = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

